--- a/TheWebDevBootCamp_2018/YelpCamp/v1/views/campgrounds.ejs
+++ b/TheWebDevBootCamp_2018/YelpCamp/v1/views/campgrounds.ejs
@@ -6,18 +6,24 @@
             <h1>Welcome To YelpCamp!</h1>
             <p>View our hand-picked campgrounds from all over the world</p>
             <p>
-                <a class="btn btn-primary btn-large" href="/campgrounds/new">Add New Campground</a>
+                <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Campground</a>
             </p>
         </div>        
     </header>
-        
+    
+    <div class="row text-center" style="display:flex; flex-wrap: wrap;">
         <% campgrounds.forEach(function(camp){ %>
-            <div>
-                <h4><%= camp.name %></h4>
-                <img src="<%= camp.image %>">
+            <div class="col-md-3 col-sm-6">
+                <div class="thumbnail">
+                    <img src="<%= camp.image %>">
+                    <div class="caption">
+                        <h4><%= camp.name %></h4>
+                    </div>  
+                </div>               
             </div>
         <% }); %> 
+    </div>     
 </div>
 
 
-<% include partials/footer %>git push
+<% include partials/footer %>
